finalização do css, responsividade da pag login e cadastro e lógica dos botões de navegação entre as páginas home, login e cadastro

--- a/src/index/homepage.html
+++ b/src/index/homepage.html
@@ -9,6 +9,34 @@
     <title>Homepage</title>
 </head>
 <body>
-    
-</body>
+    <header>
+        <div>
+            <figure>
+                <img src="../assets/images/ellipse.png" alt="ícone ilustrativo">
+                <figcaption class="figcaption">ícone ilustrativo: elipse de cor lilás</figcaption>
+            </figure>
+            <h1>Kenzie Empresas</h1>
+        </div>
+
+        <!-- DIV PARA MOBILE -->
+        <div class="menuMobile">
+            <img class="openBtn" src="../assets/images/openBtn.png" alt="Abrir menu lateral">
+            <nav class="menuAsideContent">
+                <div>
+                    <img class="closeBtn" src="../assets/images/closeBtn.png" alt="Fechar menu lateral">
+                </div>
+                <ul>
+                    <li><button class="home goToHome" aria-label="ir para a página inicial">Home</button></li>
+                    <li><button class="login goToCadastro" aria-label="ir para página de cadastro">Cadastro</button></li>
+                </ul>
+            </nav>
+        </div>
+
+        <!-- DIV PARA DESKTOP -->
+        <div class="buttonsHomeAndLoginDesktop">
+            <button class="home goToHomeDesktop" aria-label="ir para a página inicial">Home</button>
+            <button class="cadastro goToCadastroDesktop" aria-label="ir para página de cadastro">Cadastro</button>
+        </div>
+    </header>
+</body> 
 </html>
