lógicas de cadastro e login iniciadas

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/styles/globalStyles.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
     <script defer src="./src/scripts/index.js"></script>
     <title>Document</title>
 </head>
 <body>
-   
+    <div class="c-loader"></div>
 </body>
 </html>
