ajuste na lógica de criar cadastro

--- a/src/index/register.html
+++ b/src/index/register.html
@@ -53,10 +53,10 @@
                     <input  class="inputSenha" name="password" type="password" placeholder="Sua senha">
                     <select id="professionalLevelsList" name="Nível profissional">
                         <option value="Valor1">Nível profissional</option>
-                        <option value="Valor2">Estágio</option>
-                        <option value="Valor3">Júnior</option>
-                        <option value="Valor4">Pleno</option>
-                        <option value="Valor5">Sênior</option>
+                        <option value="estágio">Estágio</option>
+                        <option value="júnior">Júnior</option>
+                        <option value="pleno">Pleno</option>
+                        <option value="sênior">Sênior</option>
                     </select>
                 </form>
                 <form>
