--- a/src/index/homepage.html
+++ b/src/index/homepage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/globalStyles.css">
     <link rel="stylesheet" href="../styles/homepage.css">
     <script defer src="../scripts/homepage.js"></script>
-    <script defer src="../scripts/requests.js"></script>
+    <script type='module' defer src="../scripts/requests.js"></script>
     <title>Homepage</title>
 </head>
 
