Login e Cadastro finalizados

--- a/src/index/homepage.html
+++ b/src/index/homepage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/globalStyles.css">
     <link rel="stylesheet" href="../styles/homepage.css">
-    <script defer src="../scripts/homepage.js"></script>
+    <script type='module' defer src="../scripts/homepage.js"></script>
     <script type='module' defer src="../scripts/requests.js"></script>
     <title>Homepage</title>
 </head>
@@ -50,7 +50,7 @@
 
         <section class="sectionSelectAndCards">
             <select name="selectSetores" id="setores">
-                <option value="valor1">Selecionar Setor</option>
+                <option value="todos">Todos</option>
             </select>
 
             <div class="divCardsList">
