homepage atualizada css e js

--- a/src/index/homepage.html
+++ b/src/index/homepage.html
@@ -20,7 +20,7 @@
                 <img src="../assets/images/ellipse.png" alt="ícone ilustrativo">
                 <figcaption class="figcaption">ícone ilustrativo: elipse de cor lilás</figcaption>
             </figure>
-            <h1>Kenzie Empresas</h1>
+            <h1>WorkSpace</h1>
         </div>
 
         <!-- DIV PARA MOBILE -->
