ajuste de classe css e html

--- a/src/index/homepage.html
+++ b/src/index/homepage.html
@@ -25,7 +25,7 @@
             <h1>WorkSpace</h1>
         </div>
  
-        <div class="menuHamburguer">
+        <div class="hamburguerMenu">
             <img class="openBtn" src="../assets/images/openBtn.png" alt="Abrir menu lateral">
         </div>
 
